compiler/tools/fpp-check/test/container/missing_product_recv_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/container/missing_product_recv_port.fpp:8.1
passive component C {
^
error: component with product request specifier must have product recv port
